--- a/index.html
+++ b/index.html
@@ -5,9 +5,28 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/jquery-3.4.1.js"></script>
     <script src="js/scripts.js" ></script>
-    <title></title>
+    <title>Get Prime</title>
   </head>
   <body>
+    <div class="container">
+      <h1 class="text-center">Get Prime</h1>
+      <div class="row">
+        <div class="col-6 offset-3">
+          <form action="">
+            <div class="form-group">
+              <label for="words">Please enter your words</label>
+              <input type="text" class="form-control" id="words">
+            </div>
+            <button class="btn btn-info btn-lg btn-block">Check</button>
+          </form>
+          <div class="print-out">
+    
+          </div>
+        </div>
+      </div>
+
+
+    </div>
 
   </body>
 </html>
