--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/jquery-3.4.1.js"></script>
     <script src="js/scripts.js" ></script>
-    <title>Get Prime</title>
+    <title>Get Pal</title>
   </head>
   <body>
     <div class="container">
-      <h1 class="text-center">Get Prime</h1>
+      <h1 class="text-center">Get Palindrome</h1>
       <div class="row">
         <div class="col-6 offset-3">
           <form action="">
@@ -19,7 +19,7 @@
             </div>
             <button class="btn btn-info btn-lg btn-block">Check</button>
           </form>
-          <div class="print-out">
+          <div id="printOut">
     
           </div>
         </div>
